# MECH423Lab3GUI

./: .gitignore  MECH423Lab3.pyw  pyproject.toml  readme.md  requirements.txt
MECH423Lab3GUI/function_block/: lab3_2axis_control_widget.py  lab3_dc_motor_widget.py  lab3_stepper_motor_widget.py
MECH423Lab3GUI/serial_protocol/: lab3_serial_protocol.py
MECH423Lab3GUI/widget/: serial_combo_box.py  valued_slider.py
MECH423Lab3GUI/window/: lab3_main_window.py
src/: main.py
src/function_block/: lab3_dc_motor_widget.py  lab3_stepper_motor_widget.py
src/serial_protocol/: lab3_serial_protocol.py
src/widget/: lab3_dc_motor_group_box.py  lab3_serial_combo_box.py  lab3_stepper_motor_group_box.py  valued_slider.py
src/window/: lab3_main_window.py
